Adding Code coverage, license check, and build badges\ adding nginx as reverse proxy in front of gunicorn\ adding Dockerfile for nginx\ Adding tests and and extending the jenkinsfile

--- a/infra/k8s/manifests/django-demo-service.yaml
+++ b/infra/k8s/manifests/django-demo-service.yaml
@@ -25,8 +25,7 @@ spec:
   ports:
     - port: 80
       targetPort: 8000
-      nodePort: 32432
       name: django-demo
   selector:
     component: django-demo
-  type: NodePort        
+  type: ClusterIP        
