--- a/Dockerfile-database-setup
+++ b/Dockerfile-database-setup
@@ -4,4 +4,5 @@ WORKDIR /usr/src/app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 ADD . /usr/src/app
-ENTRYPOINT [ "python", "manage.py", "migrate" ] 
+ENTRYPOINT [ "python", "manage.py" ]
+CMD [ "migrate" ] 
