--- a/Dockerfile-database-setup
+++ b/Dockerfile-database-setup
@@ -1,8 +1,7 @@
 FROM python:3.7
-MAINTAINER prem.it.rits@gmail.com
 WORKDIR /usr/src/app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
-ADD . /usr/src/app
+COPY . /usr/src/app
 ENTRYPOINT [ "python", "manage.py" ]
 CMD [ "migrate" ] 
